<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="230dp"
            android:src="@drawable/musiclogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text="@string/explore_latest_hits_only_on_music_stream"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:textColorHint="#50292929"
            android:textColor="@color/black"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:id="@+id/email_edittext"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#50292929"
            android:textColor="@color/black"
            android:padding="16dp"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:id="@+id/password_edittext"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColorHint="#50292929"
            android:textColor="@color/black"
            android:padding="16dp"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:id="@+id/confirm_password_edittext"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>


        <Button
            android:id="@+id/create_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/create_account"
             android:background="@drawable/rounded_button"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="32dp"
            android:layout_height="60dp"
            android:visibility="gone"
            android:indeterminateTint="@color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/goto_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:gravity="center" />


    </LinearLayout>


</LinearLayout>